--- a/phing/build.xml
+++ b/phing/build.xml
@@ -4,7 +4,9 @@
   <target name="test">
     <phpunit2 haltonfailure="true" printsummary="true">
 	  <batchtest>
-	    <fileset file="./test/AllTest.php"/>
+	    <fileset dir="./test/">
+	      <include name="AllTest.php"/>
+	    </fileset> 
 	  </batchtest>
 	</phpunit2>
   </target>
