--- a/phing/build.xml
+++ b/phing/build.xml
@@ -59,7 +59,7 @@
     <echo msg="PHP Unit..." />
 	<exec command="mkdir phpunit" dir="./tools" />
 	<exec command="mkdir coverage" dir="./tools/phpunit" />
-	<exec command="phpunit --log-xml ${project.basedir}/tools/phpunit/phpunit.xml --log-pmd ${project.basedir}/tools/phpunit/phpunit.pmd.xml --coverage-xml ${project.basedir}/tools/phpunit/coverage/clover.xml --coverage-html ${project.basedir}/tools/phpunit/coverage/ AllTest ./test/AllTest.php" dir="." />
+	<exec command="phpunit --log-xml ${project.basedir}/tools/phpunit/phpunit.xml --log-pmd ${project.basedir}/tools/phpunit/phpunit.pmd.xml --coverage-xml ${project.basedir}/tools/phpunit/coverage/clover.xml --coverage-html ${project.basedir}/tools/phpunit/coverage/ AllTest ../test/AllTest.php" dir="." />
   </target>
 
   <!-- PHP copy/paste analysis -->
