--- a/phing/build.xml
+++ b/phing/build.xml
@@ -6,6 +6,7 @@
     <!-- Setup TestUni1 using ./db_create script. -->
     <exec command="./create_database db admin admin" dir="./db_things" />
     <exec command="mv db ../" dir="./db_things"/>
+	<exec command="rm locked" dir="./db" />
 
 	<!-- Setup general things -->
     <exec command="cp -R * ../" dir="./default/"/>
@@ -59,7 +60,7 @@
     <echo msg="PHP Unit..." />
 	<exec command="mkdir phpunit" dir="./tools" />
 	<exec command="mkdir coverage" dir="./tools/phpunit" />
-	<exec command="phpunit --log-xml ${project.basedir}/tools/phpunit/phpunit.xml --log-pmd ${project.basedir}/tools/phpunit/phpunit.pmd.xml --coverage-xml ${project.basedir}/tools/phpunit/coverage/clover.xml --coverage-html ${project.basedir}/tools/phpunit/coverage/ AllTest ../test/AllTest.php" dir="." />
+	<exec command="phpunit --stop-on-failure --log-xml ${project.basedir}/tools/phpunit/phpunit.xml --log-pmd ${project.basedir}/tools/phpunit/phpunit.pmd.xml --coverage-xml ${project.basedir}/tools/phpunit/coverage/clover.xml --coverage-html ${project.basedir}/tools/phpunit/coverage/ AllTest ./test/AllTest.php" dir="." />
   </target>
 
   <!-- PHP copy/paste analysis -->
