--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ ErrorDocument 403 /wartungsarbeiten.html
 	Deny from None
 </Files>
 
-Options +Indexes
+Options -Indexes
 
 php_flag session.use_cookies 0
 php_flag magic_quotes_gpc 0
